--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       multiple operations on the chain.
     </p>
     <div id="info_outer">
-      <div id="height" style="position: relative; left: 10%;">
+      <div id="height" style="position: relative; font-size: 10px; vertical-align: auto; max-width: max-content;">
         Loading...
       </div>
     </div>
